hphp/hack/test/typecheck/function_pointer/default_function_arg.php.exp
ERROR: File "default_function_arg.php", line 4, characters 52-76:
Expected constant expression for initializer (Parsing[1002])
